# ai-toolkit

./: .gitignore  pyproject.toml  requirements.txt  roadmap_ai_architect_steven.md
week01/api/: main.py
week01/models/: document.py
week01/tests/: test_document.py  test_normalizer.py
week01/utils/: normalizer.py
