[project]
name = "ai-toolkit"
version = "0.1.0"
description = "AI learning toolkit"
authors = [
    {name = "St3v3nBayer",email = "stevenbayerlamprea@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.16,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
